# antigravity-node-stable

./: .dockerignore  .env.example  .gitignore  Dockerfile  PRODUCTION_PLAN.md  README.md  RUNNING.md  START.bat  backup_v13_snapshot.ps1  check_branches.py  docker-bake.hcl  docker-compose.minimal.yml  docker-compose.yml  init-sr.sql  install.ps1  pyproject.toml  requirements.txt
lib/agentic-workflows/: README.md  pyproject.toml
lib/agentic-workflows/src/agentic_workflows/: __init__.py  bridge.py  cli.py
lib/agentic-workflows/src/agentic_workflows/a2a/: __init__.py  a2a_types.py  client.py  integration.py  server.py
lib/agentic-workflows/src/agentic_workflows/agents/: __init__.py  agent_hierarchy.py  agent_loader.py  audit.py  base.py  claude_agent.py  loader.py  phuc_agents.py  registry.py  skill_loader.py
lib/agentic-workflows/src/agentic_workflows/artifacts/: __init__.py  generator.py  manager.py  storage.py
lib/agentic-workflows/src/agentic_workflows/context/: __init__.py  agent_trust.py  graph.py  provenance.py  trust.py
lib/agentic-workflows/src/agentic_workflows/core/: __init__.py  artifact.py  context_graph.py  debate.py  handoff.py  multi_llm.py  orchestrator.py  persistence.py  scratchpad.py
lib/agentic-workflows/src/agentic_workflows/guardrails/: __init__.py  jailbreak.py  pii.py  topics.py  validator.py
lib/agentic-workflows/src/agentic_workflows/handoffs/: __init__.py  checkpoint.py  manager.py  recovery.py
lib/agentic-workflows/src/agentic_workflows/hooks/: __init__.py
lib/agentic-workflows/src/agentic_workflows/integrations/: __init__.py  autogen_adapter.py  claude_sdk.py  crewai_adapter.py  dspy_optimizer.py  llama_index.py  openai_sdk.py
lib/agentic-workflows/src/agentic_workflows/mcp/: __init__.py  auth.py  prompts.py  resources.py  sampling.py  transports.py
lib/agentic-workflows/src/agentic_workflows/mcp_ui/: __init__.py  actions.py  components.py  integration.py  resource.py  ui_types.py
lib/agentic-workflows/src/agentic_workflows/observability/: __init__.py  alerts.py  mcp_metrics.py  metrics.py  telemetry.py  tracing.py
lib/agentic-workflows/src/agentic_workflows/openai_agents/: __init__.py  agent.py  agent_types.py  guardrails.py  runner.py  tracing.py
lib/agentic-workflows/src/agentic_workflows/openai_apps/: __init__.py  components.py  integration.py  state.py  widget_server.py  widget_types.py
lib/agentic-workflows/src/agentic_workflows/openai_skills/: __init__.py  compat.py  installer.py  loader.py  registry.py  skill_types.py
lib/agentic-workflows/src/agentic_workflows/sdk/: __init__.py  (+4 more)
(+238 files in other folders)
